...
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintBottom_toTopOf="@id/tilLastName"
                app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstName"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:hint="@string/auth_input_first_name_hint"
                    android:inputType="textCapWords" />
            </com.example.ui.views.CustomTextInputLayout>

            <com.example.ui.views.CustomTextInputLayout
...
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintBottom_toTopOf="@id/tilMiddleName"
                app:layout_constraintTop_toBottomOf="@id/tilFirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastName"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:hint="@string/auth_input_last_name_hint"
                    android:inputType="textCapWords" />
            </com.example.ui.views.CustomTextInputLayout>

            <com.example.ui.views.CustomTextInputLayout
...
                app:errorEnabled="false"
                app:errorIconDrawable="@null"
                app:layout_constraintBottom_toTopOf="@id/tilEmail"
                app:layout_constraintTop_toBottomOf="@id/tilLastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMiddleName"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:hint="@string/auth_input_middle_name_hint"
                    android:inputType="textCapWords" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/scNoMiddleName"
...
