...
        android:background="@color/main_background">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/btnConfirm"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ln_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:text="@string/enter_last_six_numbers_from_letter"
                    android:textColor="@color/black"
                    android:textSize="17sp" />


                <com.example.ui.views.codeView.CodeConfirmationView
                    android:id="@+id/email_code_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    app:codeViewHeight="@dimen/email_code_view_height"
                    app:codeViewLength="6"
...
