...
        android:background="@drawable/background_custom_input_view_unfocused"
        app:layout_constraintEnd_toStartOf="@id/tilPasswordTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPasswordOne"
            style="@style/TextInputEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="********"
...
        android:background="@drawable/background_custom_input_view_unfocused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tilPasswordOne"
        app:layout_constraintTop_toBottomOf="@id/tv_new">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPasswordTwo"
            style="@style/TextInputEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="********"
...
