...
        android:layout_marginTop="16dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/Profile.Edit.Input.SingleLine"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/auth_input_password_hint"
            android:inputType="textPassword" />
    </com.example.ui.views.CustomTextInputLayout>
...
