...
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLogin"
                tools:hint="@string/new_email"
                style="@style/Profile.Edit.Input.SingleLine"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:inputType="textEmailAddress" />
        </com.example.ui.views.CustomTextInputLayout>
...
